<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pink">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="74dp"
                android:layout_height="75dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/main_image_default_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/main_description_default_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_image" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/main_name_default_text"
                app:layout_constraintStart_toEndOf="@+id/item_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/main_price_default_text"
                app:layout_constraintStart_toEndOf="@+id/item_image"
                app:layout_constraintTop_toBottomOf="@+id/item_name" />

            <CheckBox
                android:id="@+id/purchase_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:backgroundTint="@color/magenta"
                android:buttonTint="@color/magenta"
                android:text="@string/main_purchased_default_text"
                app:layout_constraintEnd_toStartOf="@+id/hide_details"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toEndOf="@+id/item_description"
                app:layout_constraintTop_toBottomOf="@+id/item_price" />

            <Button
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/magenta"
                android:text="@string/main_edit_button_default_text"
                android:textColor="@color/light_red"
                app:layout_constraintBottom_toTopOf="@+id/hide_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/hide_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/magenta"
                android:text="@string/main_hide_details_button_default_text"
                android:textColor="@color/light_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit" />

            <Button
                android:id="@+id/unhide_details_button"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="140dp"
                android:layout_marginRight="140dp"
                android:backgroundTint="@color/magenta"
                android:text="@string/main_unhide_details_button_default_text"
                android:textColor="@color/light_red"
                android:textSize="12sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/magenta">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/magenta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
